[backend] Test some entities